--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Norfolk Inn Paddington</title>
+    <title>Sonder The Voyage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="mt-2">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <h3><a href="#" class="link-underline-none">
-                    Norfolk Inn Paddington
-                </a></h3>
+                <a href="#" class="nav-link logo verde-bosque">
+                    Sonder The Voyage
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-muted" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="#inicio">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-muted" aria-current="page" href="#">Perfil</a>
+                            <a class="nav-link" aria-current="page" href="#perfil">Perfil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-muted" aria-current="page" href="#">Contacto</a>
+                            <a class="nav-link" aria-current="page" href="#">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -34,33 +35,87 @@
     </header>
 
     <main>
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/norfolk-square-600x430.jpg" class="d-block w-100" alt="...">
+        <div class="container" id="inicio">
+            <div id="carouselExample" class="carousel slide carousel-fade">
+                <div class="carousel-inner" >
+                    <div class="carousel-item active">
+                        <img src="img/sonder1.jpg" class="d-block w-100" alt="Imágen del frente del Hotel">
+                        <div class="carousel-caption d-none d-md-block">
+                            <div class="text-box m-4">
+                                <h3 class="txt">Descubre Londres desde el corazón de Paddington!!</h3>
+                                <p>Hospédate en el Sonder The Voyage y disfruta de una estancia cómoda y conveniente.</p>
+                            </div>
+                            <a class="btn btn-custom btn-lg" href="#" role="button">Reserva ahora</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/sonder2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <div class="text-box m-4">
+                                <h3 class="txt">Descubre Londres desde el corazón de Paddington!!</h3>
+                                <p>Hospédate en el Sonder The Voyage y disfruta de una estancia cómoda y conveniente.</p>
+                            </div>
+                            <a class="btn btn-custom btn-lg" href="#" role="button">Reserva ahora</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/sonder3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <div class="text-box m-4">
+                                <h3 class="txt">Descubre Londres desde el corazón de Paddington!!</h3>
+                                <p>Hospédate en el Sonder The Voyage y disfruta de una estancia cómoda y conveniente.</p>
+                            </div>
+                            <a class="btn btn-custom btn-lg" href="#" role="button">Reserva ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        <div class="container p-4" id="perfil">
+            <div class="row">
+              <div class="col-md-6">
+                <h2>Sonder The Voyage</h2>
+                <p class="parrafo">Sonder The Voyage se encuentra en el centro de Londres, a 2 min a pie de Estación de Paddington, y dispone de habitaciones con aire acondicionado y wifi gratis. El alojamiento se encuentra a 1,9 km de Museo Madame Tussauds, a 1,9 km de Royal Albert Hall y a 2,3 km de Campo de críquet Lord's. Este alojamiento libre de humo está a 1,8 km de The Serpentine.
+                Las unidades de este alojamiento están equipadas con TV de pantalla plana con canales por cable. El baño privado está equipado con bañera o ducha, artículos de aseo gratuitos y secador de pelo. En el hotel, cada habitación cuenta con ropa de cama y toallas.
+                Oxford Street está a 2,3 km del alojamiento, y Victoria and Albert Museum está a 2,6 km. El aeropuerto más cercano (Aeropuerto de Londres - City) está a 19 km.</p>
               </div>
-              <div class="carousel-item">
-                <img src="img/norfolk-inn-paddington-hotel-reception-lobby-600x430.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/double-room-4-545x430.png" class="d-block w-100" alt="...">
+              <div class="col-md-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1303.2269068151627!2d-0.17439876646922198!3d51.51558171969595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761ab2d79de2d5%3A0xa20c122c8e113f34!2sOasis%20Hotel%2C%2013-17%20Norfolk%20Square%2C%20Tyburnia%2C%20London%20W2%201RU%2C%20Reino%20Unido!5e1!3m2!1ses!2sar!4v1725468166217!5m2!1ses!2sar" width="550" height="460" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-            <div class="container">
-                <h1 class="display-4">Bienvenido al Norfolk Inn Paddington</h1>
-                <p class="lead">Disfruta de una estancia inolvidable en el corazón de Londres.</p>
-                <p>El Norfolk Inn Paddington te ofrece habitaciones cómodas, un ambiente acogedor y una ubicación privilegiada.</p>
-                <a class="btn btn-primary btn-lg" href="#" role="button">Reserva ahora</a>
-              </div>
-          </div>
+        </div>
+        <div class="container">
+            <h3 class="text-center pt-4">Una experiencia moderna en el corazón de Paddington</h3>
+            <h6 class="text-center">El Sonder The Voyage es una opción de alojamiento moderna y cómoda ubicada en una zona privilegiada de Londres. Se encuentra a pocos pasos de la estación de Paddington, lo que lo convierte en un punto de partida ideal para explorar la ciudad.</h6>
+            <p class="pt-5">¿Qué puedes encontrar cerca del Sonder The Voyage?</p>
+            <div class="row pt-3">
+                <div class="col-md-3">
+                    <img src="img/hyde.png" alt="Hyde Park" class="img-fluid">
+                    <p class="text-center">Hyde Park</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="img/museo.png" alt="Imagen 2" class="img-fluid">
+                    <p class="text-center">Museo de Historia</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="img/restaurant.png" alt="Imagen 3" class="img-fluid">
+                    <p>Restaurantes</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="img/t.png" alt="Imagen 4" class="img-fluid">
+                    <p class="text-center">Tiendas</p>
+                </div>
+            </div>
+        </div>
+        
     </main>
 
     <footer>
