--- a/index.html
+++ b/index.html
@@ -78,9 +78,18 @@
                 <span class="visually-hidden">Next</span>
                 </button>
             </div>
+            <div class="pt-5">
+                <h2 class="pb-3">Paddington: un barrio con alma viajera.</h2>
+                <div class="position-relative">
+                    <img src="img/pocodepaddington.png" class="w-100" alt="Imágen de la estación de Paddington">
+                    <div>
+                        <h6 class="position-absolute overlay px-3">Paddington, un rincón vibrante de Londres, ha sido testigo de siglos de transformaciones. Sus orígenes se remontan a un tranquilo pueblo de canales, pero con la llegada del ferrocarril, se convirtió en un bullicioso centro de transportes. La icónica estación de Paddington, que conecta la capital con el oeste de Inglaterra, es un símbolo de esta rica historia. Hoy en día, Paddington se ha reinventado como un barrio moderno y cosmopolita, sin perder su encanto original. Sus calles empedradas, sus elegantes casas adosadas y sus animados mercados lo convierten en un destino ideal para aquellos que buscan experimentar la auténtica vida londinense.</h6>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="container p-4" id="perfil">
-            <div class="row">
+        <div class="container pt-5" id="perfil">
+            <div class="row pt-5">
               <div class="col-md-6">
                 <h2>Sonder The Voyage</h2>
                 <p class="parrafo">Sonder The Voyage se encuentra en el centro de Londres, a 2 min a pie de Estación de Paddington, y dispone de habitaciones con aire acondicionado y wifi gratis. El alojamiento se encuentra a 1,9 km de Museo Madame Tussauds, a 1,9 km de Royal Albert Hall y a 2,3 km de Campo de críquet Lord's. Este alojamiento libre de humo está a 1,8 km de The Serpentine.
@@ -88,39 +97,58 @@
                 Oxford Street está a 2,3 km del alojamiento, y Victoria and Albert Museum está a 2,6 km. El aeropuerto más cercano (Aeropuerto de Londres - City) está a 19 km.</p>
               </div>
               <div class="col-md-6">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1303.2269068151627!2d-0.17439876646922198!3d51.51558171969595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761ab2d79de2d5%3A0xa20c122c8e113f34!2sOasis%20Hotel%2C%2013-17%20Norfolk%20Square%2C%20Tyburnia%2C%20London%20W2%201RU%2C%20Reino%20Unido!5e1!3m2!1ses!2sar!4v1725468166217!5m2!1ses!2sar" width="550" height="460" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3016.297919443651!2d-0.17600452306444542!3d51.515618810102566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b0726c46b99%3A0xce4e32c23010ae8d!2sSonder%20The%20Voyage!5e1!3m2!1ses!2sar!4v1725540219043!5m2!1ses!2sar" width="550" height="460" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
-        </div>
-        <div class="container">
-            <h3 class="text-center pt-4">Una experiencia moderna en el corazón de Paddington</h3>
-            <h6 class="text-center">El Sonder The Voyage es una opción de alojamiento moderna y cómoda ubicada en una zona privilegiada de Londres. Se encuentra a pocos pasos de la estación de Paddington, lo que lo convierte en un punto de partida ideal para explorar la ciudad.</h6>
-            <p class="pt-5">¿Qué puedes encontrar cerca del Sonder The Voyage?</p>
-            <div class="row pt-3">
-                <div class="col-md-3">
-                    <img src="img/hyde.png" alt="Hyde Park" class="img-fluid">
-                    <p class="text-center">Hyde Park</p>
-                </div>
-                <div class="col-md-3">
-                    <img src="img/museo.png" alt="Imagen 2" class="img-fluid">
-                    <p class="text-center">Museo de Historia</p>
-                </div>
-                <div class="col-md-3">
-                    <img src="img/restaurant.png" alt="Imagen 3" class="img-fluid">
-                    <p>Restaurantes</p>
-                </div>
-                <div class="col-md-3">
-                    <img src="img/t.png" alt="Imagen 4" class="img-fluid">
-                    <p class="text-center">Tiendas</p>
+            <div class="pt-5">
+                <h2 class="text-center pt-4">Una experiencia moderna en el corazón de Paddington</h2>
+                <h6 class="text-center">En el corazón de este barrio lleno de historia, se encuentra Sonder The Voyage, un alojamiento boutique que te invita a embarcarte en un viaje único. Inspirado por la rica historia de Paddington y el espíritu aventurero de sus habitantes, este hotel te ofrece una experiencia personalizada y acogedora. Sonder The Voyage se encuentra en un edificio moderno, pero con un toque de elegancia clásica. Cada apartamento está diseñado con un estilo contemporáneo y cuenta con todas las comodidades que necesitas para sentirte como en casa. Relájate en tu sala de estar, cocina tus propias comidas o simplemente disfruta de las vistas de la ciudad desde la comodidad de tu habitación.</h6>
+                <p class="pt-5">¿Qué podés encontrar cerca del Sonder The Voyage?</p>
+                <div class="row pt-3">
+                    <div class="col-md-3">
+                        <a href="#"><img src="img/hydepark.png" alt="Hyde Park" class="img-fluid img-thumbnail"></a>
+                        <p class="text-center">Hyde Park</p>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#"><img src="img/museohistoria.png" alt="Museo de historia y ciencias" class="img-fluid img-thumbnail"></a>
+                        <p class="text-center">Museo de Historia</p>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#"><img src="img/restaurant.png" alt="Restaurante Angus" class="img-fluid img-thumbnail"></a>
+                        <p class="text-center">Restaurantes</p>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#"><img src="img/store.png" alt="Tienda Paddington" class="img-fluid img-thumbnail"></a>
+                        <p class="text-center">Tiendas</p>
+                    </div>
                 </div>
             </div>
+            <section>
+                <h2 class="pt-5 pt-2">Nuestros hoteles</h2>
+                <div class="galeria">
+                    <img src="img/1.jpg" alt="Dormitorio del  hotel.">
+                    <img src="img/2.jpg" alt="Recepción del hotel.">
+                    <img src="img/3.jpg" alt="Frente del hotel.">
+                    <img src="img/4.jpg" alt="Otra recepcón del hotel.">
+                    <img src="img/5.jpg" alt="Parque enfrente del hotel.">
+                </div>
+            </section>
         </div>
-        
     </main>
 
     <footer>
 
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        $(document).ready(function() {
+          $('.img-thumbnail').hover(function() {
+            $(this).addClass('grayscale');
+          }, function() {
+            $(this).removeClass('grayscale');
+          });
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
