agregando la paleta de colores y corrigiendo algunos padding

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a href="#" class="nav-link logo verde-bosque">
-                    Sonder The Voyage
-                </a>
+                <a href="#inicio" class="nav-link logo verde-bosque">                Sonder The Voyage</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -90,50 +88,50 @@
             </div>
         </div>
         <div class="container pt-5" id="perfil">
-            <div class="row pt-5">
-              <div class="col-md-6">
+            <div class="row pt-5" id="per">
+                <div class="col-md-6">
                 <h2>Sonder The Voyage</h2>
                 <p class="parrafo">Sonder The Voyage se encuentra en el centro de Londres, a 2 min a pie de Estación de Paddington, y dispone de habitaciones con aire acondicionado y wifi gratis. El alojamiento se encuentra a 1,9 km de Museo Madame Tussauds, a 1,9 km de Royal Albert Hall y a 2,3 km de Campo de críquet Lord's. Este alojamiento libre de humo está a 1,8 km de The Serpentine.
                 Las unidades de este alojamiento están equipadas con TV de pantalla plana con canales por cable. El baño privado está equipado con bañera o ducha, artículos de aseo gratuitos y secador de pelo. En el hotel, cada habitación cuenta con ropa de cama y toallas.
                 Oxford Street está a 2,3 km del alojamiento, y Victoria and Albert Museum está a 2,6 km. El aeropuerto más cercano (Aeropuerto de Londres - City) está a 19 km.</p>
-              </div>
-              <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3016.297919443651!2d-0.17600452306444542!3d51.515618810102566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b0726c46b99%3A0xce4e32c23010ae8d!2sSonder%20The%20Voyage!5e1!3m2!1ses!2sar!4v1725540219043!5m2!1ses!2sar" width="550" height="460" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
+                </div>
+                <div id="experiencia" class="container pt-5">
+                    <h2 class="text-center pt-4">Una experiencia moderna en el corazón de Paddington</h2>
+                    <p class="parrafoexp text-center">En el corazón de este barrio lleno de historia, se encuentra Sonder The Voyage, un alojamiento boutique que te invita a embarcarte en un viaje único. Inspirado por la rica historia de Paddington y el espíritu aventurero de sus habitantes, este hotel te ofrece una experiencia personalizada y acogedora. Sonder The Voyage se encuentra en un edificio moderno, pero con un toque de elegancia clásica. Cada apartamento está diseñado con un estilo contemporáneo y cuenta con todas las comodidades que necesitas para sentirte como en casa. Relájate en tu sala de estar, cocina tus propias comidas o simplemente disfruta de las vistas de la ciudad desde la comodidad de tu habitación.</p>
+                    <p class="pt-5">¿Qué podés encontrar cerca del Sonder The Voyage?</p>
+                    <div class="row pt-3">
+                        <div class="col-md-3">
+                            <a href="#"><img src="img/hydepark.png" alt="Hyde Park" class="img-fluid img-thumbnail border-black" style="border: none;"></a>
+                            <p class="text-center">Hyde Park</p>
+                        </div>
+                        <div class="col-md-3">
+                            <a href="#"><img src="img/museohistoria.png" alt="Museo de historia y ciencias" class="img-fluid img-thumbnail"></a>
+                            <p class="text-center">Museo de Historia</p>
+                        </div>
+                        <div class="col-md-3">
+                            <a href="#"><img src="img/restaurant.png" alt="Restaurante Angus" class="img-fluid img-thumbnail"></a>
+                            <p class="text-center">Restaurantes</p>
+                        </div>
+                        <div class="col-md-3">
+                            <a href="#"><img src="img/store.png" alt="Tienda Paddington" class="img-fluid img-thumbnail"></a>
+                            <p class="text-center">Tiendas</p>
+                        </div>
+                    </div>
+                </div>
+                <section id="nuestroshoteles">
+                    <h2 class="pt-5">Nuestros hoteles</h2>
+                    <div class="galeria">
+                        <img src="img/1.jpg" alt="Dormitorio del  hotel.">
+                        <img src="img/2.jpg" alt="Recepción del hotel.">
+                        <img src="img/3.jpg" alt="Frente del hotel.">
+                        <img src="img/4.jpg" alt="Otra recepcón del hotel.">
+                        <img src="img/5.jpg" alt="Parque enfrente del hotel.">
+                    </div>
+                </section>
             </div>
-            <section id="experiencia" class="pt-5">
-                <h2 class="text-center pt-4">Una experiencia moderna en el corazón de Paddington</h2>
-                <p class="text-center">En el corazón de este barrio lleno de historia, se encuentra Sonder The Voyage, un alojamiento boutique que te invita a embarcarte en un viaje único. Inspirado por la rica historia de Paddington y el espíritu aventurero de sus habitantes, este hotel te ofrece una experiencia personalizada y acogedora. Sonder The Voyage se encuentra en un edificio moderno, pero con un toque de elegancia clásica. Cada apartamento está diseñado con un estilo contemporáneo y cuenta con todas las comodidades que necesitas para sentirte como en casa. Relájate en tu sala de estar, cocina tus propias comidas o simplemente disfruta de las vistas de la ciudad desde la comodidad de tu habitación.</p>
-                <p class="pt-5">¿Qué podés encontrar cerca del Sonder The Voyage?</p>
-                <div class="row pt-3">
-                    <div class="col-md-3">
-                        <a href="#"><img src="img/hydepark.png" alt="Hyde Park" class="img-fluid img-thumbnail"></a>
-                        <p class="text-center">Hyde Park</p>
-                    </div>
-                    <div class="col-md-3">
-                        <a href="#"><img src="img/museohistoria.png" alt="Museo de historia y ciencias" class="img-fluid img-thumbnail"></a>
-                        <p class="text-center">Museo de Historia</p>
-                    </div>
-                    <div class="col-md-3">
-                        <a href="#"><img src="img/restaurant.png" alt="Restaurante Angus" class="img-fluid img-thumbnail"></a>
-                        <p class="text-center">Restaurantes</p>
-                    </div>
-                    <div class="col-md-3">
-                        <a href="#"><img src="img/store.png" alt="Tienda Paddington" class="img-fluid img-thumbnail"></a>
-                        <p class="text-center">Tiendas</p>
-                    </div>
-                </div>
-            </section>
-            <section id="nuestroshoteles">
-                <h2 class="pt-5">Nuestros hoteles</h2>
-                <div class="galeria">
-                    <img src="img/1.jpg" alt="Dormitorio del  hotel.">
-                    <img src="img/2.jpg" alt="Recepción del hotel.">
-                    <img src="img/3.jpg" alt="Frente del hotel.">
-                    <img src="img/4.jpg" alt="Otra recepcón del hotel.">
-                    <img src="img/5.jpg" alt="Parque enfrente del hotel.">
-                </div>
-            </section>
             <section id="servicios" class="mb-4">
                 <h2 class="pt-5">Servicios</h2>
                 <div class="row pt-4">
@@ -199,7 +197,6 @@
                 </div>
             </section>
         </div>
-
         <footer>
             <div class="footer">
                 <div class="row pt-4">
